--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/login_icon"
@@ -28,7 +34,7 @@
             android:name=".activity.SystemVideoPlayerActivity"
             android:screenOrientation="landscape"
             android:label="@string/plyaer_name"
-            android:theme="@style/myScreen">
+            android:theme="@style/noAnimation_Theme">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -269,6 +275,15 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".activity.VitamioVideoPlayerActivity"
+            android:screenOrientation="landscape"
+            android:launchMode="singleTask"
+            android:theme="@style/noAnimation_Theme"
+            >
+
+
         </activity>
 
     </application>
