09.网络视频&xUtils3请求图片和数据

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':vitamio')
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'org.xutils:xutils:3.5.0'
 }
