--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'org.xutils:xutils:3.5.0'
     compile 'com.cjj.materialrefeshlayout:library:1.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+//    compile 'org.greenrobot:eventbus:3.0.0'
 }
