--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile files('libs/Msc.jar')
     compile files('libs/Sunflower.jar')
     compile 'com.jakewharton:butterknife:5.1.1'
+    compile project(':jcvideoplayer-lib')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
