设置图片和GIF的点击事件

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':StartAllVideoPlayer', ':vitamio', ':jcvideoplayer-lib'
+include ':app', ':StartAllVideoPlayer', ':vitamio', ':jcvideoplayer-lib', ':PhotoView-library'
