--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.1'
     compile project(':jcvideoplayer-lib')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile project(':PhotoView-library')
 }
